# assignment-service

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml
.github/workflows/: package-assignment-service.yml
dependencies/cpphttp/include/: request.hpp  router.hpp  tcplistener.hpp
dependencies/cpphttp/src/: request.cpp
dependencies/liblzma/lib/pkgconfig/: liblzma.pc
dependencies/libxml2/include/libxml2/libxml/: xmlversion.h
dependencies/libxml2/lib/pkgconfig/: libxml-2.0.pc
include/: azure.hpp  database.hpp  endpoints.hpp  formParser.hpp
src/: azure.cpp  database.cpp  endpoints.cpp  formParser.cpp  hash.cpp  main.cpp
